[tool.poetry]
name = "hacker-news-proxy"
version = "0.1.0"
description = ""
authors = ["NikGor <nicolas.gordienko@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
